--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"start": "NODE_ENV=production node dist/server.js",
 		"build": "tsc",
-		"develop": "NODE_ENV=development ts-node --esm server.ts"
+		"develop": "NODE_ENV=development ts-node --esm server.ts",
+		"watch": "nodemon server.ts"
 	},
 	"author": "",
 	"license": "ISC",
@@ -18,7 +19,7 @@
 		"dotenv": "^16.0.2",
 		"express": "^4.17.1",
 		"express-session": "^1.17.2",
-		"jsonwebtoken": "^9.0.0",
+		"jsonwebtoken": "^9.0.1",
 		"jwt-decode": "^3.1.2",
 		"mongodb": "^4.9.1",
 		"mongoose": "^6.11.1",
