--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
 		"mongodb": "^4.9.1",
 		"mongoose": "^6.11.1",
 		"nodemon": "^2.0.16",
-		"ts-node": "^10.9.1"
+		"ts-node": "^10.9.1",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.21.8",
 		"@babel/preset-env": "^7.21.5",
 		"@babel/preset-typescript": "^7.21.4",
+		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.1",
 		"@types/jest": "^29.5.1",
+		"@types/uuid": "^9.0.2",
 		"babel-jest": "^29.5.0",
 		"typescript": "^4.8.2"
 	},
